--- a/src/app/hero-list-auto/hero-list-auto.component.html
+++ b/src/app/hero-list-auto/hero-list-auto.component.html
@@ -1,5 +1,5 @@
 <ul class="heroes">
-  <li *ngFor="let hero of heroes" [@flyInOut]="'in'" (click)="removeHero(hero.id)">
+  <li *ngFor="let hero of heroes" [@shrinkOut]="'in'" (click)="removeHero(hero.id)">
     <div class="inner">
       <span class="badge">{{ hero.id }}</span>
       <span>{{ hero.name }}</span>
