--- a/src/app/hero-list-groups/hero-list-groups.component.css
+++ b/src/app/hero-list-groups/hero-list-groups.component.css
@@ -92,3 +92,10 @@
     top: -3px;
     width: 12em;
   }
+  
+  
+  /*
+  Copyright Google LLC. All Rights Reserved.
+  Use of this source code is governed by an MIT-style license that
+  can be found in the LICENSE file at http://angular.io/license
+  */
